# CryptoBot

./: .env  .replit  96202f53-1986-4de7-87d9-4bffd8d0e0e6  README.md  api_test.py  bot.py  config.py  crypto_analyzer.py  crypto_bot.db  database_setup.md  language_test.py  main.py  pyproject.toml  replit.md  run_bot.py  simple_bot.py  telegram_bot.py  test_bot.py  tradingview_integration.py  user_database.py
