[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.14",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "python-telegram-bot==21.9",
    "requests>=2.32.4",
    "telegram>=0.0.1",
]
